--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,6 +34,14 @@ android {
     defaultConfig {
         minSdkVersion 16
     }
+    kotlinOptions {
+        jvmTarget = '11'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
 }
 
 dependencies {
